--- a/client/src/CSS/default.css
+++ b/client/src/CSS/default.css
@@ -38,6 +38,11 @@
 	#menu li
 	{
 		display: inline-block;
+		text-decoration: none;
+		font-size: 0.90em;
+		font-weight: 600;
+		font-family: 'Montserrat', sans-serif;
+		text-transform: uppercase;
 	}
 	
 	#menu li a, #menu li span
