--- a/client/src/CSS/page.css
+++ b/client/src/CSS/page.css
@@ -15,10 +15,10 @@
 
 .spa{
     display: inline;
-    background-color:rgb(238, 187, 120);
+    background-color:#ff8a0e;
 }
 .nav{
-    background-color:rgb(249, 141, 65);
+    background-color:#ff8a0e;
     color: aliceblue;
 }
 .nav-h{
@@ -51,10 +51,14 @@
 
 }
 .my_card{
-    /* display: flex; */
+    display: flex;
+    justify-content: center;
+
 }
 .my_c{
-    /* max-width: 18rem; */
+    background-color: rgb(210, 209, 208);
+    max-width: 30rem;
+    justify-content: center;
 }
 .inp
 {
@@ -67,11 +71,169 @@
   }
 .imag{
     height:100px;
+    justify-content: center;
+    /* align-items: center; */
+    /* margin-left: 42%; */
+}
+.h_img
+{
+    width: 650px;
+    height: 700px;
+    /* min-height: 100vh; */
+}
+.my_home{
+    display: flex;
+    margin-top: 50px;
+}
+.tab_head{
+    background-color: #ff8a0e;
+}
+.my_abt div{
+    display: block ;
+}
+.table-responsive{
+    overflow-x: auto;
+    min-height: 0.01%;
+}
+.my_abt{
+    text-align: justify;
+    margin-top: 50px;
+    border:2px;
+}
+
+.pull-left {
+    float: left !important;
+};
+.pull-right {
+    float: right !important;
+};
+.about{
+    text-align: left;
+    font-family: 'Lato', sans-serif;
+    font-size: 16px;
+    color: #d52d2d !important;
+    font-weight: 400;
+    margin: 20px;
+    border:2px;
+}
+.abt_c{
+    text-align: left;
+    font-family: 'Lato', sans-serif;
+    font-size: 16px;
+    color: #242424;
+    font-weight: 400;
+    margin: 20px;
+    border:2px;
+
+}
+.heading-colored {
+    font-size: 36px;
+    /* background: #ff8a0e; */
+    color: #ff8a0e;
+    text-indent: -2px;
+    text-transform: uppercase;
+    line-height: 36px;
+    font-weight: 800;
+    position: relative;
+    margin: 0 0 30px 0;
+}
+.home_art{
+    margin: 10px 10px 10px 20px;
+}
+.my_home p{
+    font-family: 'Lato', sans-serif;
+    font-size: 16px;
+    color: #242424;
+    line-height: 22px;
+    font-weight: 400;
+    margin-bottom: 20px;
+    text-align: justify;
+}
+.member{
+    
+    display: inline-block;
+    text-decoration: none;
+    background-color: #ff8a0e;
+    color: #ffffff;
+    /* border-radius: 3px; */
+    margin: 0px;
+    padding: 6px 80px;
+}
+.mem_det p{
+    font-size: 16px;
+    color: #242424;
+    line-height: 21px;
+    font-family: lato, sans-serif;
+    font-weight: 400;
+    margin: 0 0 20px 0;
+    position: relative;
+    padding: 0px;
+}
+.mem_con p{
+    font-size: 16px;
+    color: #242424;
+    line-height: 21px;
+    font-family: lato, sans-serif;
+    font-weight: 400;
+    margin: 0 0 20px 0;
+    position: relative;
+    padding: 0px 0px 0px 30px;
+}
+.my_mem
+{
+    padding: 3em 0;
+    clear: both;
+    z-index: 3;
+    text-align: justify;
+    position: relative;
+    background: #FFF;
+    height: auto;
+}
+.my_contact{
+    text-align: left;
+    margin-top: 50px;
+    display: flex;
+}
+.my_contact span{
+    font-size: 16px;
+    color: #242424;
+    line-height: 21px;
+    font-family: lato, sans-serif;
+    font-weight: 400;
+}
+.c_img{
+    position: relative;
+    width: 90%;
+    height:80%;
+}
+.icon{
+    position: absolute;
+    left: 0;
+    top: 0; 
+    width: 30px;
+}
+.box{
+    width: 100%;
+    float: left;
+    margin: 20px 0px 0px 0px;
+}
+.b_h{
+    font-size: 18px;
+    color: #ff8a0e;
+    line-height: 18px;
+    font-weight: 800;
+    font-family: 'Montserrat', sans-serif;
+    margin: 0px 0px 15px 0px;
+    padding: 0;
+    text-transform: uppercase;
 }
 .external{
     color:black;
     text-decoration: none;
 
+}
+.head{
+    font-weight: bold;
 }
 .table-row {
     opacity: 0;
@@ -90,8 +252,21 @@
     {
         display:inline-table;
         justify-content: center;
-        border: 4px solid #98610e;;
 
+    }
+    .my_home{
+        display: block;
+        margin-top: 50px;
+    }
+    .my_contact{
+        text-align: left;
+        margin-top: 50px;
+        display:block;
+    }
+    .c_img{
+        float: left;
+        width: 90%;
+        height:80%;
     }
     .inp
     {
